end of first section

--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 
 <body>
     <section class="first-part">
-        <div class="half-width">
-            <h1>
-                Thingking off a PIZZA?
-            </h1>
+        <div class="half-width half-width-text">
+            <h1 class="diet-text">Thingking off <span class="thingking-diet">Diet?</span></h1>
+            <h1>Just skip diet and eat Healthy</h1>
+            <p>Eat helthy, stay strong. and Join a Boxing Community. start boxing, win gold medals. Make your Parent
+                Proud</p>
 
+            <a class="link-button " target="_blank" href="https://www.facebook.com/emran.hasan.518">Order Now</a>
+        </div>
+        <div class="half-width half-width-img">
+            <img id="sc1-img" src="images/male/bargermen1.png" alt="Avatar">
         </div>
     </section>
 
