a lot off change

--- a/index.html
+++ b/index.html
@@ -10,20 +10,77 @@
 </head>
 
 <body>
-    <section class="first-part">
+    <section class="first-part flexible-containe">
         <div class="half-width half-width-text">
             <h1 class="diet-text">Thingking off <span class="thingking-diet">Diet?</span></h1>
             <h1>Just skip diet and eat Healthy</h1>
             <p>Eat helthy, stay strong. and Join a Boxing Community. start boxing, win gold medals. Make your Parent
                 Proud</p>
+            <h1>Like us on Facebook <a class="linkedin" target="_blank"
+                    href=https://www.facebook.com/pizzahutbangladesh/?brand_redir=371119989692153>
+                    Pizza Hut
+                </a> </h1>
 
-            <a class="link-button " target="_blank" href="https://www.facebook.com/emran.hasan.518">Order Now</a>
+            <a class="link-button " target="_blank" href="https://pizzahutbd.com/">Order Now</a>
         </div>
         <div class="half-width half-width-img">
-            <img id="sc1-img" src="images/male/bargermen1.png" alt="Avatar">
+            <img id="sc1-img" src="images/food/male/bargermen1.png" alt="Avatar">
+        </div>
+    </section>
+    <section class="second-part flexible-containe">
+        <div class="half-width">
+            <img id="sc2-img"
+                src="images/food/male/guy-eats-hot-dog-which-himself-has-prepared-street-food-young-man-blue-shirt-eats-hot-dog-white-background-100449486-removebg-preview.png"
+                alt="">
+        </div>
+        <div class="half-width">
+            <h1>About Our Food</h1>
+            <p>we made world fast, famous and best pizza with world best italian mozarela cheez, safe broyler chicken,
+                capsicum, kalavuna, kiwi, vegetables, tomato and tomato ketchum, salad and a verious thing.</p>
+            <a class="link-button " target="_blank" href="https://www.facebook.com/emran.hasan.518/">Contact us</a>
+
         </div>
     </section>
 
+
+    </section>
+    <section>
+        <div id="recepie">
+            <h1>Our recepic</h1>
+            <p>Our top Sales recepie Extra vergine italian pizza. </p>
+            <p>we also sales cheez potato nachos, cold drinks, french
+                fries, Burer and many other various thing.</p>
+        </div>
+
+        <div class="fourth-part">
+            <div id="exs-flex" class="three-width">
+                <img src="images/food/1.png" alt="" height="200px" width="250px">
+                <h2>Nachos</h2>
+
+                <p> Vegetable Nachos is our first recepie, this is soo good for health, i wish you will be surprised
+                    after trying this recepic.</p>
+            </div>
+            <div id="exxs-flex" class="three-width">
+                <img src="images/food/2.jpg" alt="" height="200px" width="250px">
+                <h2>Pizza</h2>
+                <p>Pure vegetables. For the vegetrain we have garden fresh pure vegetable, its will make you stronger
+                    and healthier</p>
+            </div>
+            <div id="exxxs-flex" class="three-width">
+                <img src="images/food/3.jpg" alt="" height="200px" width="250px">
+                <h2>Barger</h2>
+
+                <p>Burger, our third recepie is burger, burger is known as junck food ,if you love burger join with us
+                </p>
+            </div>
+        </div>
+
+
+    </section>
+    <footer>
+        <h3> <span class="white">Loaking for</span> <span class="thingking-diet">Pizza</span></h3>
+        <p> <span class="white">© Md Imran Hossain 2021, a Programming Hero initiative.</span> </p>
+    </footer>
 </body>
 
 </html>
