follower line added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <p>Eat helthy, stay strong. and Join a Boxing Community. start boxing, win gold medals. Make your Parent
                 Proud</p>
             <h1>Like us on Facebook <a class="linkedin" target="_blank"
-                    href=https://www.facebook.com/pizzahutbangladesh/?brand_redir=371119989692153>
+                    href="https://www.facebook.com/pizzahutbangladesh/?brand_redir=371119989692153"
+                    style="text-decoration:none">
                     Pizza Hut
                 </a> </h1>
 
@@ -74,6 +75,22 @@
                 </p>
             </div>
         </div>
+    </section>
+    <section class="botthom-text">
+
+        <div class="bottom-style">
+            <h1 class="font-weight">778k</h1>
+            <p>youtube follower</p>
+        </div>
+        <div class="bottom-style">
+            <h1 class="font-weight">22m </h1>
+            <p>facebook follower</p>
+        </div>
+        <div class="bottom-style">
+            <h1 class="font-weight">17m</h1>
+            <p>instagram follower</p>
+        </div>
+
 
 
     </section>
