--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 <body>
     <section class="first-part flexible-containe">
         <div class="half-width half-width-text">
-            <h1 class="diet-text">Thingking off <span class="thingking-diet">Diet?</span></h1>
-            <h1>Just skip diet and eat Healthy</h1>
+            <h1 class="diet-text">Tired off <span class="thingking-diet">Diet?</span></h1>
+            <h1 class="diet-text">What About a <span class="thingking-diet2">Burger?</span></h1>
+            <h1>Just skip diet and eat Delishious</h1>
             <p>Eat helthy, stay strong. and Join a Boxing Community. start boxing, win gold medals. Make your Parent
                 Proud</p>
             <h1>Like us on Facebook <a class="linkedin" target="_blank"
-                    href="https://www.facebook.com/pizzahutbangladesh/?brand_redir=371119989692153"
+                    href="https://www.facebook.com/search/top?q=burger%20king%20bangladesh"
                     style="text-decoration:none">
-                    Pizza Hut
+                    Buger king
                 </a> </h1>
 
-            <a class="link-button " target="_blank" href="https://pizzahutbd.com/">Order Now</a>
+            <a class="link-button " target="_blank" href="https://www.bk.com/">Order Now</a>
         </div>
         <div class="half-width half-width-img">
             <img id="sc1-img" src="images/food/male/bargermen1.png" alt="Avatar">
@@ -36,8 +37,9 @@
         </div>
         <div class="half-width">
             <h1>About Our Food</h1>
-            <p>we made world fast, famous and best pizza with world best italian mozarela cheez, safe broyler chicken,
-                capsicum, kalavuna, kiwi, vegetables, tomato and tomato ketchum, salad and a verious thing.</p>
+            <p>we made world fast, famous and best Burger with world best italian cheez, safe broyler chicken,
+                capsicum, kalavuna, kiwi, vegetables, tomato and tomato ketchum, salad and a verious thing. I say Try
+                our Burger Before you Die</p>
             <a class="link-button " target="_blank" href="https://www.facebook.com/emran.hasan.518/">Contact us</a>
 
         </div>
@@ -47,31 +49,33 @@
     </section>
     <section>
         <div id="recepie">
-            <h1>Our recepic</h1>
-            <p>Our top Sales recepie Extra vergine italian pizza. </p>
+            <h1>Our recepie</h1>
+            <p>Our top Sales recepie Extra vergine italian cheez naga Burger </p>
             <p>we also sales cheez potato nachos, cold drinks, french
-                fries, Burer and many other various thing.</p>
+                fries, Steak, Burer and many other various thing.</p>
         </div>
 
         <div class="fourth-part">
             <div id="exs-flex" class="three-width">
                 <img src="images/food/1.png" alt="" height="200px" width="250px">
-                <h2>Nachos</h2>
+                <h2>Soup</h2>
 
-                <p> Vegetable Nachos is our first recepie, this is soo good for health, i wish you will be surprised
-                    after trying this recepic.</p>
+                <p> Vegetable and almonds Soup with wheat honey mix is our best seller recepie, this is soo good for
+                    health, i wish you will be surprised
+                    after trying this recepie.</p>
             </div>
             <div id="exxs-flex" class="three-width">
                 <img src="images/food/2.jpg" alt="" height="200px" width="250px">
-                <h2>Pizza</h2>
-                <p>Pure vegetables. For the vegetrain we have garden fresh pure vegetable, its will make you stronger
+                <h2>Steak</h2>
+                <p>Japanees a5 waggu steak is the most popular steak around in the world, its will make you stronger
                     and healthier</p>
             </div>
             <div id="exxxs-flex" class="three-width">
                 <img src="images/food/3.jpg" alt="" height="200px" width="250px">
-                <h2>Barger</h2>
+                <h2>Choclatte Cake</h2>
 
-                <p>Burger, our third recepie is burger, burger is known as junck food ,if you love burger join with us
+                <p>Choclattecake is our third recepie is , if you tast this cake just a single time you will remember
+                    the amaizing tast of this cake lifetime.
                 </p>
             </div>
         </div>
@@ -96,7 +100,10 @@
     </section>
     <footer>
         <h3> <span class="white">Loaking for</span> <span class="thingking-diet">Pizza</span></h3>
-        <p> <span class="white">© Md Imran Hossain 2021, a Programming Hero initiative.</span> </p>
+        <p> <span class="white">© <a target="_blank" href="https://www.facebook.com/emran.hasan.518/"
+                    style=" color: white; "> <strong>Md Imran
+                        Hossain</strong> </a> 2021, a
+                Programming Hero initiative.</span> </p>
     </footer>
 </body>
 
